syntax = "proto3";
package eventmessages;
option go_package = "eventmessages";
option java_package = "com.factom.factomd.eventmessages";

import "github.com/bi-foundation/protobuf-graphql-extension/graphqlproto/graphql.proto";
import "github.com/bi-foundation/protobuf-graphql-extension/graphqlproto/types/timestamp.proto";

option (graphqlproto.graphql) = true;

// ====  DIRECTORY BLOCK DETAILS =====
message DirectoryBlock {
    DirectoryBlockHeader header = 1;
    repeated DirectoryBlockEntry entries = 2;
    bytes hash = 3;
    bytes chainID = 4;
    bytes keyMerkleRoot = 5;
}

message DirectoryBlockHeader {
    bytes bodyMerkleRoot = 1;
    bytes previousKeyMerkleRoot = 2;
    bytes previousFullHash = 3;
    graphqlproto.types.Timestamp timestamp = 4;
    uint32 blockHeight = 5;
    uint32 blockCount = 6;
    uint32 version = 7;
    uint32 networkID = 8;
}

message DirectoryBlockEntry {
    bytes chainID = 1;
    bytes keyMerkleRoot = 2;
}


message DirectoryBlockAnchor {
    bytes directoryBlockHash = 1;
    bytes directoryBlockMerkleRoot = 2;
    uint32 blockHeight = 3;
    graphqlproto.types.Timestamp timestamp = 4;
    bytes btcTxHash = 5;
    uint32 btcTxOffset = 6;
    uint32 btcBlockHeight = 7;
    bytes btcBlockHash = 8;
    bool btcConfirmed = 9;
    bytes ethereumAnchorRecordEntryHash = 10;
    bool ethereumConfirmed = 11;
}
